# AWSoftware

./: .gitmodules  CMakeLists.txt  tasks.txt
Base/: CMakeLists.txt
Base/Common/: CMakeLists.txt
Base/Common/include/public/base.common/: Assert.hpp  Signals.hpp  StringUtils.hpp
Base/Common/testing/: CMakeLists.txt  TestAssert.cpp  TestStringUtils.cpp
Base/Logging/: CMakeLists.txt
Base/Logging/gmock/include/public/base.logging.gmock/: MockILogger.hpp
Base/Logging/gmock/src/public/base.logging.gmock/: MockILogger.cpp
Base/Logging/include/internal/base.logging.internal/: FileLoggerStrategy.hpp  Logger.hpp
Base/Logging/include/public/base.logging/: FileLoggerStrategy.hpp  ILogger.hpp  LoggerMacros.hpp  Logging.hpp
Base/Logging/src/internal/base.logging.internal/: FileLoggerStrategy.cpp
Base/Logging/src/public/base.logging/: FileLoggerStrategy.cpp
Base/Logging/testing/: CMakeLists.txt  TestFileLoggerStrategy.cpp  TestLogger.cpp  TestLogging.cpp
Base/Module/: CMakeLists.txt
Base/Module/gmock/include/public/base.module.gmock/: MockIModule.hpp
Base/Module/gmock/src/public/base.module.gmock/: MockIModule.cpp
Base/Module/include/public/base.module/: IModule.hpp  ModuleProvider.hpp
Base/Module/src/public/base.module/: ModuleProvider.cpp
Base/Module/testing/: CMakeLists.txt  TestModuleProvider.cpp
SceneGraph/Base/: CMakeLists.txt
SceneGraph/Base/gmock/include/internal/scenegraph.base.internal.gmock/: MockINode.hpp  MockINodeVisitor.hpp
SceneGraph/Base/gmock/src/internal/scenegraph.base.internal.gmock/: MockINode.cpp  MockINodeVisitor.cpp
SceneGraph/Base/include/internal/scenegraph.base.internal/: INode.hpp  INodeVisitor.hpp  Node.hpp  NodeInstance.hpp  NodeOccurrence.hpp  TypedNodeInstance.hpp  TypedNodeOccurrence.hpp
SceneGraph/Base/include/public/scenegraph.base/: NodeInstance.hpp  NodeUtils.hpp  NodeVisitors.hpp
SceneGraph/Base/src/internal/scenegraph.base.internal/: Node.cpp  NodeInstance.cpp  NodeOccurrence.cpp
SceneGraph/Base/testing/: CMakeLists.txt  DerivedNodes.cpp  DerivedNodes.hpp  FakeTestNodes.cpp  FakeTestNodes.hpp  TestNodeInstance.cpp  TestNodeOccurrence.cpp  TestNodes.cpp  TestTypedNodeInstance.cpp  TestTypedNodeOccurrence.cpp
